changed survival to success, edited abstract intro & refs

--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -59,7 +59,7 @@ year = {2010}
 
 @article{laland1996social,
   title={Is social learning always locally adaptive?},
-  author={Laland, Kevin N and GALEF, BG},
+  author={Laland, Kevin N and Galef, BG},
   journal={Animal Behaviour},
   volume={52},
   pages={637--644},
