--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -406,6 +406,20 @@ year = {2010}
   publisher={Freeman and Company}
 }
 
+@article{seitz2021touchscreentraining,
+    doi = {10.1371/journal.pone.0246446},
+    author = {Seitz, Benjamin M. AND McCune, Kelsey AND MacPherson, Maggie AND Bergeron, Luisa AND Blaisdell, Aaron P. AND Logan, Corina J.},
+    journal = {PLOS ONE},
+    publisher = {Public Library of Science},
+    title = {Using touchscreen equipped operant chambers to study animal cognition. Benefits, limitations, and advice},
+    year = {2021},
+    month = {02},
+    volume = {16},
+    url = {https://doi.org/10.1371/journal.pone.0246446},
+    pages = {1-18},
+    number = {2}
+}
+
 @article{seitz2020tstrainingdata,
   title={Touchscreen training data for great-tailed grackles},
   author={Seitz, B and McCune, KB and MacPherson, M and Bergeron, L and Blaisdell, A and Logan, CJ},
@@ -415,6 +429,15 @@ year = {2010}
   year={2020}
 }
 
+@article{logan2021inhibition,
+ title={Are the more flexible great-tailed grackles also better at behavioral inhibition?},
+ url={psyarxiv.com/vpc39},
+ DOI={10.31234/osf.io/vpc39},
+ publisher={PsyArXiv},
+ author={Logan, Corina J and McCune, Kelsey and MacPherson, Maggie and Johnson-Ulrich, Zoe and Rowney, Carolyn and Seitz, Benjamin and Blaisdell, Aaron and Deffner, Dominik and Wascher, Claudia},
+ year={2021}
+}
+
 @article{logan2020inhibitiondata,
   title={Great-tailed grackle inhibition data},
   author={Logan, CJ and McCune, KB and MacPherson, M and Johnson-Ulrich, Z and Rowney, C and Seitz, B and Blaisdell, A and Deffner, D and Wascher, C},
@@ -422,6 +445,15 @@ year = {2010}
   doi={10.5063/M043S3},
   volume={Data package},
   year={2020}
+}
+
+@article{blaisdell2021causal,
+ title={Do the more flexible individuals rely more on causal cognition? Observation versus intervention in causal inference in great-tailed grackles (version 5 of this preprint has been peer reviewed and recommended by Peer Community In Ecology [https://doi.org/10.24072/pci.ecology.100076])},
+ url={psyarxiv.com/z4p6s},
+ DOI={10.31234/osf.io/z4p6s},
+ publisher={PsyArXiv},
+ author={Blaisdell, Aaron and Seitz, Benjamin and Rowney, Carolyn and Folsom, Melissa and MacPherson, Maggie and Deffner, Dominik and Logan, Corina J},
+ year={2021}
 }
 
 @article{blaisdell2021causaldata,
