--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1431,6 +1431,14 @@ publisher={American Psychological Association}
     doi = {10.18637/jss.v040.i08},
   }
 
+@article{mccune2019exploration,
+  title={Is behavioral flexibility linked with exploration, but not boldness, persistence, or motor diversity?},
+  author={McCune, KB, and MacPherson, M, and Rowney, C, and Bergeron, L, and Folsom, M, and Logan, CJ},
+  journal={In principle acceptance by PCI Ecology of the version on 27 Mar 2019},
+  year={2019},
+  url={http://corinalogan.com/Preregistrations/g_exploration.html}
+}
+
 @phdthesis{mccune2018cognition,
   title={Cognition gone wild: a test of the social intelligence hypothesis in wild birds},
   author={McCune, Kelsey Brenna},
