--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -406,6 +406,15 @@ year = {2010}
   publisher={Freeman and Company}
 }
 
+@article{logan2022flexmanip,
+  title={Behavioral flexibility is manipulatable and it improves flexibility and problem solving in a new context},
+  author={Logan, CJ and Blaisdell, A and Johnson-Ulrich, Z and Lukas, D and MacPherson, M and Seitz, B and Sevchik, A and McCune, KB},
+  journal={EcoEvoRxiv},
+  year={2022},
+  doi={https://doi.org/10.32942/osf.io/5z8xs},
+  url={http://corinalogan.com/Preregistrations/g_flexmanip2.html}
+}
+
 @article{seitz2021touchscreentraining,
     doi = {10.1371/journal.pone.0246446},
     author = {Seitz, Benjamin M. AND McCune, Kelsey AND MacPherson, Maggie AND Bergeron, Luisa AND Blaisdell, Aaron P. AND Logan, Corina J.},
