--- a/Files/rrs/mi.bib
+++ b/Files/rrs/mi.bib
@@ -1,3 +1,14 @@
+@article{valente2021conspecific,
+title={Conspecific attraction for conservation and management of terrestrial breeding birds: Current knowledge and future research directions},
+author={Valente, Jonathon J and LeGrande-Rolls, Christa L and Rivers, James W and Tucker, Anna M and Fischer, Richard A and Betts, Matthew G},
+journal={The Condor},
+volume={123},
+number={2},
+pages={duab007},
+year={2021},
+publisher={Oxford University Press US}
+}
+
 @article{Robertson2016birdstatus,
 author = {Robertson, Hugh A and Baird, Karen and Dowding, John E. and Elliott, Graeme P. and Hitchmough, Rodney A and Miskelly, Colin M. and McArthur, Nikki and O'Donnell, Colin F J and Sagar, Paul M. and Scofield, R. Paul and Taylor, Graeme A.},
 journal = {New Zealand Threat Classification Series 19},
